dim/spec/test_input/invalid_input/yaml_syntax_invalid.dim
Config:
  CompanyName:
    files: CompanyName: test: tests
